Added pieces moves

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "design-system/*": ["src/apps/front-office/design-system/*"],
       "assets/*": ["./src/shared/assets/*"],
       "user": ["src/apps/front-office/account/user"],
-      "app/*": ["src/apps/front-office/*"]
+      "app/*": ["src/apps/front-office/*"],
+      "@chess/*": ["src/apps/chess/*"]
     },
     "jsx": "react-jsx",
     "plugins": [
