--- a/package.json
+++ b/package.json
@@ -1,74 +1,77 @@
 {
-    "name": "chessmate",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "rm -rf ./node_modules/.vite && unlink yarn.lock && yarn update && yarn install && yarn start",
-        "update": "npx ncu -u",
-        "lint": "npx eslint .",
-        "fix": "npx eslint --fix -c ./.eslintrc.json ./src",
-        "format": "npx prettier --write ./**/*.{js,jsx,ts,tsx,css,scss,md,json} --config ./.prettierrc.json",
-        "start": "vite --host",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
-        "prepare": "husky install"
-    },
-    "dependencies": {
-        "@mongez/cache": "^1.2.1",
-        "@mongez/config": "^1.0.26",
-        "@mongez/dom": "^1.1.2",
-        "@mongez/events": "^2.1.0",
-        "@mongez/http": "^2.2.5",
-        "@mongez/huskier": "^1.0.6",
-        "@mongez/localization": "^2.2.3",
-        "@mongez/react": "^3.0.6",
-        "@mongez/react-atom": "^3.2.2",
-        "@mongez/react-form": "^2.0.19",
-        "@mongez/react-helmet": "^1.0.9",
-        "@mongez/react-hooks": "^1.3.3",
-        "@mongez/react-localization": "^1.0.5",
-        "@mongez/react-router": "^2.1.25",
-        "@mongez/reinforcements": "^2.3.7",
-        "@mongez/supportive-is": "^1.0.12",
-        "@mongez/user": "^1.0.12",
-        "@mongez/validator": "^1.0.18",
-        "@tabler/icons-react": "^2.32.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "sass": "1.54.4",
-        "@emotion/react": "11.10.0",
-        "@emotion/styled": "11.10.0"
-    },
-    "devDependencies": {
-        "@mongez/vite": "^1.0.26",
-        "@types/crypto-js": "^4.1.1",
-        "@types/node": "^20.5.3",
-        "@types/react": "^18.2.21",
-        "@types/react-dom": "^18.2.7",
-        "@typescript-eslint/eslint-plugin": "^6.4.1",
-        "@typescript-eslint/parser": "^6.4.1",
-        "@vitejs/plugin-react-swc": "^3.3.2",
-        "eslint": "^8.47.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-unused-imports": "^3.0.0",
-        "npm-check-updates": "^16.13.0",
-        "prettier": "^2.8.8",
-        "prettier-plugin-organize-imports": "^3.2.2",
-        "sass": "1.66.1",
-        "typescript": "^5.1.6",
-        "vite": "^4.4.9",
-        "vite-plugin-svgr": "^3.2.0"
-    },
-    "huskier": {
-        "hooks": {
-            "pre-commit": [
-                "yarn fix --max-warnings 0",
-                "npx tsc --noEmit"
-            ]
-        }
+  "name": "chessmate",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "rm -rf ./node_modules/.vite && unlink yarn.lock && yarn update && yarn install && yarn start",
+    "update": "npx ncu -u",
+    "lint": "npx eslint .",
+    "fix": "npx eslint --fix -c ./.eslintrc.json ./src",
+    "format": "npx prettier --write ./**/*.{js,jsx,ts,tsx,css,scss,md,json} --config ./.prettierrc.json",
+    "start": "vite --host",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "prepare": "husky install"
+  },
+  "dependencies": {
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@mongez/cache": "^1.2.4",
+    "@mongez/config": "^1.0.26",
+    "@mongez/dom": "^1.1.2",
+    "@mongez/events": "^2.1.0",
+    "@mongez/http": "^2.2.10",
+    "@mongez/huskier": "^2.0.0",
+    "@mongez/localization": "^2.2.4",
+    "@mongez/react": "^3.0.6",
+    "@mongez/react-atom": "^5.0.0",
+    "@mongez/react-form": "^2.1.3",
+    "@mongez/react-helmet": "^1.0.9",
+    "@mongez/react-hooks": "^1.3.3",
+    "@mongez/react-localization": "^1.0.5",
+    "@mongez/react-router": "^2.3.8",
+    "@mongez/reinforcements": "^2.3.10",
+    "@mongez/supportive-is": "^2.0.3",
+    "@mongez/user": "^1.0.13",
+    "@mongez/validator": "^1.0.18",
+    "@tabler/icons-react": "^3.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sass": "1.77.7"
+  },
+  "devDependencies": {
+    "@mongez/vite": "^2.0.4",
+    "@types/crypto-js": "^4.2.2",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "npm-check-updates": "^16.13.0",
+    "postcss": "^8.4.39",
+    "prettier": "^2.8.8",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "sass": "1.66.1",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
+    "vite-plugin-svgr": "^4.2.0"
+  },
+  "huskier": {
+    "hooks": {
+      "pre-commit": [
+        "yarn fix --max-warnings 0",
+        "npx tsc --noEmit"
+      ]
     }
+  }
 }
