Added promotion, king check and checkmate

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "noEmit": true,
     "paths": {
       "apps/*": ["./src/apps/*"],
+      "@/*": ["./src/*"],
       "shared/*": ["./src/shared/*"],
       "design-system": ["src/apps/front-office/design-system"],
       "design-system/*": ["src/apps/front-office/design-system/*"],
