--- a/package.json
+++ b/package.json
@@ -35,10 +35,17 @@
     "@mongez/supportive-is": "^2.0.3",
     "@mongez/user": "^1.0.13",
     "@mongez/validator": "^1.0.18",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.10.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "1.77.7"
+    "sass": "1.77.7",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@mongez/vite": "^2.0.4",
