--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "no-unused-vars": "off",
+    "react/prop-types": "off",
     "unused-imports/no-unused-vars": [
       "warn",
       {
